誰がなんと言おうとこれはスペシャルイベントです！！！！！！

--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -14,10 +14,12 @@
  special_event_title_EGR_unification:0 "ドイツの統一"
  special_event_desc_EGR_unification:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
  special_event_exit_EGR_unification:0 "もう誰も悲しまない世へ"
+ special_event_title_WGR_unification:0 "ドイツの統一"
+ special_event_desc_WGR_unification:0 "肝心なのは、我々が歴史を作るのだ。\n書くのではない。\n-オットー・フォン・ビスマルク"
+ special_event_exit_WGR_unification:0 "ドイツに栄光を！"
+
 
 special_event_nepal:0 "ネパール国歌"
 special_event_test:0 "なんの変哲もない音声"
 special_event_EGR_unification:0 "ドイツ民主共和国国歌"
- special_event_title_EGR_unification:0 "ドイツの統一"
- special_event_desc_EGR_unification:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
- special_event_exit_EGR_unification:0 "もう誰も悲しまない世へ"
+special_event_WGR_unification:0 "ドイツ統一行進曲"
