--- a/localisation/_geacps_special_event_l_english.yml
+++ b/localisation/_geacps_special_event_l_english.yml
@@ -11,15 +11,15 @@
  special_event_title_nepal:0 "幸福の国"
  special_event_desc_nepal:0 "数多の人種、言語、宗教、そして文化、\n進歩ありし国ネパール万歳！"
  special_event_exit_nepal:0 "§B常に幸福を！"
- special_event_title_EGR_unification:0 "ドイツの統一"
+ special_event_title_EGR_unification:0 "ドイツ再統一"
  special_event_desc_EGR_unification:0 "ドイツ、一つの祖国。\n過去の困難を克服し、意思のままに団結する。"
  special_event_exit_EGR_unification:0 "もう誰も悲しまない世へ"
- special_event_title_WGR_unification:0 "ドイツの統一"
+ special_event_title_WGR_unification:0 "ドイツ再統一"
  special_event_desc_WGR_unification:0 "肝心なのは、我々が歴史を作るのだ。\n書くのではない。\n-オットー・フォン・ビスマルク"
  special_event_exit_WGR_unification:0 "ドイツに栄光を！"
 
 
 special_event_nepal:0 "ネパール国歌"
 special_event_test:0 "なんの変哲もない音声"
-special_event_EGR_unification:0 "ドイツ民主共和国国歌"
+special_event_EGR_unification:0 "Auferstanden aus Ruinen\n廃墟からの復活"
 special_event_WGR_unification:0 "ドイツ統一行進曲"
