傀儡ディシジョンの追加

--- a/localisation/_geacps_release_l_english.yml
+++ b/localisation/_geacps_release_l_english.yml
@@ -62,3 +62,32 @@
  fate_of_BAN.3.0:0 "全土を$IND$に与えよう"
  fate_of_BAN.3.0:0 "全土を$PAK$に与えよう"
  
+ release_BHU:0 "ブータンの運命"
+ fate_of_BHU.1.t:0 "ブータンの運命"
+ fate_of_BHU.1.d:0 "占領したブータン地域をどのようにすべきだろうか。"
+ fate_of_BHU.1.0:0 "ブータン地域のみに従順な国家を"
+ fate_of_BHU.1.1:0 "友に分け与えよう！"
+ fate_of_BHU.1.2:0 "ブータンは我が領土である"
+ fate_of_BHU.2.t:0 "ブータンの運命"
+ fate_of_BHU.2.d:0 "解放する国家はどのような政体が良いだろうか。"
+ fate_of_BHU.2.0:0 "共和国として解放"
+ fate_of_BHU.2.1:0 "ブータンはソビエト一部であろう?"
+ fate_of_BHU.3.t:0 "ブータンの運命"
+ fate_of_BHU.3.d:0 "ブータン地域をどのように与えるべきだろうか"
+ fate_of_BHU.3.0:0 "全土を$IND$に与えよう"
+ fate_of_BHU.3.1:0 "全土を$TIB$に与えよう"
+ 
+ release_BRM:0 "ビルマの運命"
+ fate_of_BRM.1.t:0 "ビルマの運命"
+ fate_of_BRM.1.d:0 "占領したビルマ地域をどのようにすべきだろうか。"
+ fate_of_BRM.1.0:0 "ビルマ地域のみに従順な国家を"
+ fate_of_BRM.1.1:0 "友に分け与えよう！"
+ fate_of_BRM.1.2:0 "ビルマは我が領土である"
+ fate_of_BRM.2.t:0 "ビルマの運命"
+ fate_of_BRM.2.d:0 "解放する国家はどのような政体が良いだろうか。"
+ fate_of_BRM.2.0:0 "共和国として解放"
+ fate_of_BRM.2.1:0 "ビルマはソビエト一部であろう?"
+ fate_of_BRM.3.t:0 "ビルマの運命"
+ fate_of_BRM.3.d:0 "ビルマ地域をどのように与えるべきだろうか"
+ fate_of_BRM.3.0:0 "全土を$IND$に与えよう"
+ 
