--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -39,6 +39,8 @@
  
  BRM_state:0 "ビルマ国"
  BRM_state_DEF:0 "ビルマ国"
+ BRM_kingdom:0 "ビルマ王国"
+ BRM_kingdom_DEF:0 "ビルマ王国"
  BRM_union:0 "ビルマ連邦"
  BRM_union_DEF:0 "ビルマ連邦"
  BRM_union_republic:0 "ビルマ連邦共和国"
