--- a/localisation/Temporary/geacps_JAP_l_english.yml
+++ b/localisation/Temporary/geacps_JAP_l_english.yml
@@ -201,11 +201,11 @@
  geacps_JAP.2.t:0 "一・二二事件"
  geacps_JAP.2.d:0 "A"
  geacps_JAP.2.a:0 "首謀者を逮捕しろ！"
- geacps_JAP.001.title:0 "海軍を主導する人材の選定"
- geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
- geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
- geacps_JAP.001.b:0 "大艦巨砲主義者を再び"
- geacps_JAP.001.c:0 "夜戦第一主義者を探し出す"
+geacps_JAP_military.00.title:0 "海軍を主導する人材の選定"
+geacps_JAP_military.00.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
+geacps_JAP_military.00.a:0 "航空主兵主義者を据え置く"
+geacps_JAP_military.00.b:0 "大艦巨砲主義者を再び"
+geacps_JAP_military.00.c:0 "夜戦第一主義者を探し出す"
  geacps_JAP.002.title:0 "[GetYear]年国策研究大綱"
  geacps_JAP.002.desc:0 "新たな国策研究の方針を立てなければいけない"
  geacps_JAP.002.a:0 "軍事研究"
