--- a/localisation/replace/tech_navy_l_english.yml
+++ b/localisation/replace/tech_navy_l_english.yml
@@ -51,4 +51,7 @@
 #equipments
  ship_hull_nuke_carrier_1:0 "原子力航空母艦 I"
  ship_hull_nuke_carrier_2:0 "原子力航空母艦 II"
+#modifier
+modifier_experience_gain_nuke_carrier_training_factor:0 "原子力航空母艦の訓練経験値獲得率"
+modifier_experience_gain_nuke_carrier_combat_factor:0 "原子力航空母艦の戦闘経験値獲得率"
 
