--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -9,11 +9,12 @@
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Draft_Constitution:0 "憲法草案"
+ JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Draft_budget:0 "予算案"
  JAP_Economy:0 "経済"
  JAP_Supporting_local_industrial_news_federations:0 "各地の産業報国連盟を支援"
+ JAP_Zaibatsu:0 "財閥"
  JAP_Military:0 "軍事"
- JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
@@ -25,6 +26,8 @@
  JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠"
  JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
  JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
+ JAP_Politics_Military:0 "～政治、軍事～"
+ JAP_Politics_Military_desc:0 "ここまで政治、ここから軍事(仮)"
  
 #国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
