--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -4,8 +4,8 @@
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
- JAP_Agrarian_watchdog:0 "農本主義者の監視"
- JAP_Naval_officer_s_purge:0 "海軍士官の粛軍"
+ JAP_Agrarian_watchdog:0 "農本主義者を監視"
+ JAP_Naval_officer_s_purge:0 "海軍士官を粛軍"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Draft_Constitution:0 "憲法草案"
@@ -23,7 +23,7 @@
  JAP_Maizuru_Naval_Factory:0 "舞鶴海軍工廠"
  JAP_Sasebo_Naval_Factory:0 "佐世保海軍工廠"
  JAP_Kokura_Army_Arsenal:0 "小倉陸軍造兵廠"
- JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠"
+ JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠を創立"
  JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
  JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
  JAP_Politics_Military:0 "～政治、軍事～"
@@ -100,6 +100,9 @@
  JAP_Hideki_Tojo:0 "東條英機"
  JAP_Kisaburo_Ando:0 "安藤紀三郎"#臨時代理
  JAP_Mamoru_Shigemitsu:0 "重光葵"#臨時代理
+ JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
+ JAP_Fumimaro_Konoe:0 "近衛文麿"
+ JAP_Kuniaki_Koiso:0 "小磯國昭"
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
