--- a/localisation/_geacps_parties_l_english.yml
+++ b/localisation/_geacps_parties_l_english.yml
@@ -66,6 +66,10 @@
  MEN_reactionary_authoritarianism_party:0 "ボルジギン氏"
  MEN_national_populism_party:0 "蒙古地方自治政務委員会"
  
+ CHI_republic_provisional_government_national_populism_party:0 "華北政務委員会"
+ 
+ CHI_republic_reformed_government_national_populism_party:0 "華中政務委員会"
+ 
  SIA_total_socialism_party:0 "タイ国共産党"
  SIA_radical_socialism_party:0 "タイ国人民解放軍"
  SIA_social_democracy_party:0 "国民社会民主党"
