--- a/localisation/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/replace/_geacps_loading_tips_l_english.yml
@@ -71,15 +71,15 @@
  LOADING_TIP_69: "大統領。私の母は、スペインなのです。\n- ホセ・アントニオ・プリモ・デ・リベラ"
  LOADING_TIP_70: "老兵は死なず、ただ消え去るのみ\n- ダグラス・マッカーサー"
  LOADING_TIP_71: "近衛首相にはその気迫はあるまい\n- 杉山 元"
- LOADING_TIP_72: "Поехали!(さあ行こう!)\n- ユーリイ・ガガーリン"
+ LOADING_TIP_72: "さあ行こう!\n- ユーリイ・ガガーリン"
  LOADING_TIP_73: "地球は青かった\n- ユーリイ・ガガーリン"
  LOADING_TIP_74: "神はいなかった\n- ユーリイ・ガガーリン"
  LOADING_TIP_75: "日本兵士よ。脱走しなさい。私が日本に帰れるようにしてあげます。\n- 野坂 参三"
  LOADING_TIP_76: "全ての人間の全ての人間に対するかのような闘争\n- 『リヴァイアサン』"
- LOADING_TIP_77: "\n- "
- LOADING_TIP_78: "\n- "
- LOADING_TIP_79: "\n- "
- LOADING_TIP_80: "\n- "
+ LOADING_TIP_77: "我々もまたあなた方アメリカ国民の覇権主義に対し今まで以上に強く戦います。\n- 鈴木　貫太郎"
+ LOADING_TIP_78: "「英米本位の平和主義を排す」\n- 近衛　文麿"
+ LOADING_TIP_79: "日本はこんなに勝っているのか\n- 小磯　國昭"
+ LOADING_TIP_80: "たぶん、歴代の朝鮮総督のうち、ご覧のとおり私が一番の醜男だ。\n- 小磯　國昭"
  LOADING_TIP_81: "\n- "
  LOADING_TIP_82: "\n- "
  LOADING_TIP_83: "\n- "
