国名, 国旗の整理

--- a/localisation/_geacps_autonomy_system_l_english.yml
+++ b/localisation/_geacps_autonomy_system_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 #傀儡
  integrated_puppet:0 "統合傀儡国"
- occupied_puppet:0 "占領地傀儡国"
+ occupied_puppet:0 "占領傀儡国"
  puppet:0 "傀儡国"
  autonomous_puppet:0 "自治傀儡国"
  nominal_puppet:0 "名目的傀儡国"
