--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,6 +1,10 @@
 ﻿l_english:
 #国家形成
 #アジア
+ GEORGIA:0 "ジョージア"
+ GEORGIA_DEF:0 "ジョージア"
+ GEORGIA_ADJ:0 "ジョージア"
+ 
  IRAN_empire:0 "イラン帝国"
  IRAN_empire_DEF:0 "イラン帝国"
  IRAN_empire_ADJ:0 "イラン"
