--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -68,9 +68,9 @@
  KAZ_DEF:0 "カザフスタン"
  KAZ_ADJ:0 "カザフスタン"
  
- KOR:0 "朝鮮"
- KOR_DEF:0 "朝鮮"
- KOR_ADJ:0 "朝鮮"
+ KOR:0 "大韓"
+ KOR_DEF:0 "大韓"
+ KOR_ADJ:0 "大韓"
  
  KUR:0 "クルディスタン"
  KUR_DEF:0 "クルディスタン"
