--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -43,6 +43,10 @@
  BRM_kingdom_DEF:0 "ビルマ王国"
  BRM_union:0 "ビルマ連邦"
  BRM_union_DEF:0 "ビルマ連邦"
+ BRM_union_total_socialism:0 "ビルマ社会主義連邦"
+ BRM_union_total_socialism_DEF:0 "ビルマ社会主義連邦"
+ BRM_union_radical_socialism:0 "ビルマ社会主義連邦"
+ BRM_union_radical_socialism_DEF:0 "ビルマ社会主義連邦"
  BRM_union_republic:0 "ビルマ連邦共和国"
  BRM_union_republic_DEF:0 "ビルマ連邦共和国"
  BRM_union_republic_total_socialism:0 "ビルマ連邦社会主義共和国"
@@ -55,8 +59,14 @@
  CAM_state:0 "カンボジア国"
  CAM_state_DEF:0 "カンボジア国"
  
+ CHI_empire:0 "中華帝国"
+ CHI_empire_DEF:0 "中華帝国"
  CHI_republic:0 "中華民国"
  CHI_republic_DEF:0 "中華民国"
+ CHI_republic_total_socialism:0 "中華人民共和国"
+ CHI_republic_total_socialism_DEF:0 "中華人民共和国"
+ CHI_republic_radical_socialism:0 "中華人民共和国"
+ CHI_republic_radical_socialism_DEF:0 "中華人民共和国"
  CHI_republic_provisional_government:0 "中華民国臨時政府"
  CHI_republic_provisional_government_DEF:0 "中華民国臨時政府"
  CHI_republic_reformed_government:0 "中華民国維新政府"
@@ -1166,6 +1176,8 @@
  ALA_republic:0 "オーランド共和国"
  ALA_republic_DEF:0 "オーランド共和国"
  
+ AOS_duchy:0 "アオスタ公国"
+ AOS_duchy_DEF:0 "アオスタ公国"
  AOS_republic:0 "アオスタ共和国"
  AOS_republic_DEF:0 "アオスタ共和国"
  
