国家タグの変更及び陣営の整理

--- a/localisation/countries_colony_l_english.txt
+++ b/localisation/countries_colony_l_english.txt
@@ -10557,50 +10557,50 @@
  KUM_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
  KUM_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
 
- KWA_dominion:0 "大連自治領"
- KWA_dominion_DEF:0 "大連自治領"
- KWA_colony:0 "$OVERLORDADJ$領大連植民地"
- KWA_colony_DEF:0 "$OVERLORDADJ$領大連植民地"
- KWA_colony_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_overseas_territory:0 "$OVERLORDADJ$領大連"
- KWA_overseas_territory_DEF:0 "$OVERLORDADJ$領大連"
- KWA_overseas_territory_HOL:0 "$OVERLORDADJ$領大連地域"
- KWA_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領大連地域"
- KWA_overseas_territory_POR:0 "$OVERLORDADJ$領大連海外州"
- KWA_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領大連海外州"
- KWA_overseas_territory_SPR:0 "$OVERLORDADJ$領大連州"
- KWA_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領大連州"
- KWA_overseas_territory_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_federation_of_colonies:0 "$OVERLORDADJ$領大連連邦"
- KWA_federation_of_colonies_DEF:0 "$OVERLORDADJ$領大連連邦"
- KWA_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_colony_and_protectorate:0 "$OVERLORDADJ$領大連植民地及び保護領"
- KWA_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領大連植民地及び保護領"
- KWA_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_protected_territory:0 "$OVERLORDADJ$保護領大連"
- KWA_protected_territory_DEF:0 "$OVERLORDADJ$保護領大連"
- KWA_protected_territory_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_mandate:0 "$OVERLORDADJ$委任統治領大連地域"
- KWA_mandate_DEF:0 "$OVERLORDADJ$委任統治領大連地域"
- KWA_mandate_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_imperial_member:0 "$OVERLORDADJ$領大連王国"
- KWA_imperial_member_DEF:0 "$OVERLORDADJ$領大連王国"
- KWA_imperial_member_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_imperial_overseas_territory:0 "$OVERLORDADJ$領大連"
- KWA_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領大連"
- KWA_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_us_commonwealth:0 "$OVERLORDADJ$領大連自治連邦区"
- KWA_us_commonwealth_DEF:0 "$OVERLORDADJ$領大連自治連邦区"
- KWA_us_commonwealth_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_us_territory:0 "$OVERLORDADJ$領大連準州"
- KWA_us_territory_DEF:0 "$OVERLORDADJ$領大連準州"
- KWA_us_territory_ADJ:0 "$OVERLORDADJ$領大連"
- KWA_soviet_member_federal_republic:0 "大連$OVERLORDADJ$連邦社会主義共和国"
- KWA_soviet_member_federal_republic_DEF:0 "大連$OVERLORDADJ$連邦社会主義共和国"
- KWA_soviet_member_republic:0 "大連$OVERLORDADJ$社会主義共和国"
- KWA_soviet_member_republic_DEF:0 "大連$OVERLORDADJ$社会主義共和国"
- KWA_soviet_autonomous_republic:0 "大連自治$OVERLORDADJ$社会主義共和国"
- KWA_soviet_autonomous_republic_DEF:0 "大連自治$OVERLORDADJ$社会主義共和国"
+ DLI_dominion:0 "大連自治領"
+ DLI_dominion_DEF:0 "大連自治領"
+ DLI_colony:0 "$OVERLORDADJ$領大連植民地"
+ DLI_colony_DEF:0 "$OVERLORDADJ$領大連植民地"
+ DLI_colony_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_overseas_territory:0 "$OVERLORDADJ$領大連"
+ DLI_overseas_territory_DEF:0 "$OVERLORDADJ$領大連"
+ DLI_overseas_territory_HOL:0 "$OVERLORDADJ$領大連地域"
+ DLI_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領大連地域"
+ DLI_overseas_territory_POR:0 "$OVERLORDADJ$領大連海外州"
+ DLI_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領大連海外州"
+ DLI_overseas_territory_SPR:0 "$OVERLORDADJ$領大連州"
+ DLI_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領大連州"
+ DLI_overseas_territory_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_federation_of_colonies:0 "$OVERLORDADJ$領大連連邦"
+ DLI_federation_of_colonies_DEF:0 "$OVERLORDADJ$領大連連邦"
+ DLI_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_colony_and_protectorate:0 "$OVERLORDADJ$領大連植民地及び保護領"
+ DLI_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領大連植民地及び保護領"
+ DLI_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_protected_territory:0 "$OVERLORDADJ$保護領大連"
+ DLI_protected_territory_DEF:0 "$OVERLORDADJ$保護領大連"
+ DLI_protected_territory_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_mandate:0 "$OVERLORDADJ$委任統治領大連地域"
+ DLI_mandate_DEF:0 "$OVERLORDADJ$委任統治領大連地域"
+ DLI_mandate_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_imperial_member:0 "$OVERLORDADJ$領大連王国"
+ DLI_imperial_member_DEF:0 "$OVERLORDADJ$領大連王国"
+ DLI_imperial_member_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_imperial_overseas_territory:0 "$OVERLORDADJ$領大連"
+ DLI_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領大連"
+ DLI_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_us_commonwealth:0 "$OVERLORDADJ$領大連自治連邦区"
+ DLI_us_commonwealth_DEF:0 "$OVERLORDADJ$領大連自治連邦区"
+ DLI_us_commonwealth_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_us_territory:0 "$OVERLORDADJ$領大連準州"
+ DLI_us_territory_DEF:0 "$OVERLORDADJ$領大連準州"
+ DLI_us_territory_ADJ:0 "$OVERLORDADJ$領大連"
+ DLI_soviet_member_federal_republic:0 "大連$OVERLORDADJ$連邦社会主義共和国"
+ DLI_soviet_member_federal_republic_DEF:0 "大連$OVERLORDADJ$連邦社会主義共和国"
+ DLI_soviet_member_republic:0 "大連$OVERLORDADJ$社会主義共和国"
+ DLI_soviet_member_republic_DEF:0 "大連$OVERLORDADJ$社会主義共和国"
+ DLI_soviet_autonomous_republic:0 "大連自治$OVERLORDADJ$社会主義共和国"
+ DLI_soviet_autonomous_republic_DEF:0 "大連自治$OVERLORDADJ$社会主義共和国"
 
  MCA_dominion:0 "マカオ自治領"
  MCA_dominion_DEF:0 "マカオ自治領"
@@ -12047,50 +12047,50 @@
  ALA_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
  ALA_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
 
- BAI_dominion:0 "$NONIDEOLOGY$自治領"
- BAI_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- BAI_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- BAI_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- BAI_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_overseas_territory_HOL:0 "$OVERLORDADJ$領$NONIDEOLOGY$地域"
- BAI_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$地域"
- BAI_overseas_territory_POR:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
- BAI_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
- BAI_overseas_territory_SPR:0 "$OVERLORDADJ$領$NONIDEOLOGY$州"
- BAI_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$州"
- BAI_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- BAI_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
- BAI_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_colony_and_protectorate:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
- BAI_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
- BAI_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- BAI_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
- BAI_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- BAI_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
- BAI_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_imperial_member:0 "$OVERLORDADJ$領$NONIDEOLOGY$王国"
- BAI_imperial_member_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$王国"
- BAI_imperial_member_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_imperial_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- BAI_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
- BAI_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- BAI_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
- BAI_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- BAI_soviet_member_federal_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦社会主義共和国"
- BAI_soviet_member_federal_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦社会主義共和国"
- BAI_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- BAI_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
- BAI_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
- BAI_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
+ AMR_dominion:0 "$NONIDEOLOGY$自治領"
+ AMR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
+ AMR_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ AMR_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ AMR_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_overseas_territory_HOL:0 "$OVERLORDADJ$領$NONIDEOLOGY$地域"
+ AMR_overseas_territory_HOL_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$地域"
+ AMR_overseas_territory_POR:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
+ AMR_overseas_territory_POR_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$海外州"
+ AMR_overseas_territory_SPR:0 "$OVERLORDADJ$領$NONIDEOLOGY$州"
+ AMR_overseas_territory_SPR_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$州"
+ AMR_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_federation_of_colonies:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ AMR_federation_of_colonies_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$連邦"
+ AMR_federation_of_colonies_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_colony_and_protectorate:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
+ AMR_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
+ AMR_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ AMR_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ AMR_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_mandate:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ AMR_mandate_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
+ AMR_mandate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_imperial_member:0 "$OVERLORDADJ$領$NONIDEOLOGY$王国"
+ AMR_imperial_member_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$王国"
+ AMR_imperial_member_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_imperial_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_imperial_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_imperial_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_us_commonwealth:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
+ AMR_us_commonwealth_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$自治連邦区"
+ AMR_us_commonwealth_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_us_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
+ AMR_us_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$準州"
+ AMR_us_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ AMR_soviet_member_federal_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦社会主義共和国"
+ AMR_soviet_member_federal_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$連邦社会主義共和国"
+ AMR_soviet_member_republic:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
+ AMR_soviet_member_republic_DEF:0 "$NONIDEOLOGY$・$OVERLORDADJ$社会主義共和国"
+ AMR_soviet_autonomous_republic:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
+ AMR_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
 
  DAL_dominion:0 "$NONIDEOLOGY$自治領"
  DAL_dominion_DEF:0 "$NONIDEOLOGY$自治領"
