--- a/localisation/countries_colony_l_english.yml
+++ b/localisation/countries_colony_l_english.yml
@@ -646,6 +646,13 @@
  CCS_radical_socialism_soviet_soviet_autonomous_republic_DEF:0 "$NONIDEOLOGY$自治$OVERLORDADJ$社会主義共和国"
  CCS_soviet_soviet_autonomous_republic_ADJ:0 "NONIDEOLOGYADJ$・$OVERLORDADJ$"
  
+ DLI_leased_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ DLI_leased_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ DLI_leased_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ DLI_JAP_leased_territory:0 "$OVERLORDADJ$領関東州"
+ DLI_JAP_leased_territory_DEF:0 "$OVERLORDADJ$領関東州"
+ DLI_JAP_leased_territory_ADJ:0 "$OVERLORDADJ$領関東州"
+ 
  HKG_dominion:0 "$NONIDEOLOGY$自治領"
  HKG_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  HKG_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
