--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -854,6 +854,10 @@
  CCS_DEF:0 "コーカサス"
  CCS_ADJ:0 "コーカサス"
  
+ DLI:0 "大連"
+ DLI_DEF:0 "大連"
+ DLI_ADJ:0 "大連"
+ 
  ETR:0 "東トルキスタン"
  ETR_DEF:0 "東トルキスタン"
  ETR_ADJ:0 "東トルキスタン"
@@ -933,10 +937,6 @@
  KUM:0 "クムル"
  KUM_DEF:0 "クムル"
  KUM_ADJ:0 "クムル"
- 
- KWA:0 "関東州"
- KWA_DEF:0 "関東州"
- KWA_ADJ:0 "関東州"
  
  MCA:0 "澳門"
  MCA_DEF:0 "澳門"
@@ -1071,9 +1071,9 @@
  ALA_DEF:0 "オーランド"
  ALA_ADJ:0 "オーランド"
  
- BAI:0 "バイカル"
- BAI_DEF:0 "バイカル"
- BAI_ADJ:0 "バイカル"
+ AMR:0 "アムール"
+ AMR_DEF:0 "アムール"
+ AMR_ADJ:0 "アムール"
  
  DAL:0 "ダルマチア"
  DAL_DEF:0 "ダルマチア"
