--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1008,6 +1008,9 @@
  CCS_republic:0 "コーカサス共和国"
  CCS_republic_DEF:0 "コーカサス共和国"
  
+ DLI_warlord:0 "大連軍閥"
+ DLI_warlord_DEF:0 "大連軍閥"
+ 
  ETR_republic:0 "東トルキスタン共和国"
  ETR_republic_DEF:0 "東トルキスタン共和国"
  
@@ -1068,9 +1071,6 @@
  
  KUM_khanate:0 "クムル汗国"
  KUM_khanate_DEF:0 "クムル汗国"
- 
- KWA_warlord:0 "関東軍閥"
- KWA_warlord_DEF:0 "関東軍閥"
  
  MCA_warlord:0 "澳門軍閥"
  MCA_warlord_DEF:0 "澳門軍閥"
