ローカライゼーションの整理

--- a/localisation/replace/_geacps_core_l_english.yml
+++ b/localisation/replace/_geacps_core_l_english.yml
@@ -54,3 +54,12 @@
  geacps_debug_menu_unused:0 "特になし"
  geacps_debug_menu_world_event:0 "世界的事件"
  geacps_debug_menu_tab_country_event_text:0 "国家的事件"
+ 
+#デバッグディシジョン
+ debug_decisions:0 "デバッグディシジョン"
+ debug_special_event_test:0 "テストSE"
+ debug_special_event_nepal:0 "ネパールSE"
+ debug_special_event_EGR_unification:0 "民主共和国によるドイツ再統一SE"
+ debug_special_event_WGR_unification:0 "ホーエンツォレルン家によるドイツ再統一SE"
+ debug_special_event_add:0 "SE変数の増加"
+ debug_special_event_add:0 "SE変数の減少"
