--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -1,10 +1,12 @@
 ﻿l_english:
 #国家方針
+ JAP_The_fallen_sunrise:0 "落ちぶれた日の出"
+ JAP_Victory_in_the_China_Incident:0 "支那事変で勝利"
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
- JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
- JAP_Agrarian_watchdog:0 "農本主義者を監視"
  JAP_Naval_officer_s_purge:0 "海軍士官を粛軍"
+ JAP_Agrarian_watchdog:0 "農本主義者を監視"
+ JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
  JAP_Draft_budget:0 "予算案"
@@ -24,8 +26,14 @@
  JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
+ JAP_Five_Reform_Directives:0 "五大改革指令"
+ JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
+ JAP_New_institutional_movement:0 "新体制運動"
+ JAP_Formation_of_the_Koaha:0 "興亜派の結成"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Nae_Seon_Il_Che:0 "内鮮一体"
+ JAP_The_Koiso-Yonai_coalition_cabinet:0 "小磯・米内連立内閣"
  JAP_Politics_Military:0 "～政治、軍事～"
  JAP_Politics_Military_desc:0 "ここまで政治、ここから軍事(仮)"
  
@@ -87,7 +95,6 @@
  GEACPS_NF_JAP_navy_19:0 ""
  
 #国民精神
- JAP_Martial_law:0 "戒嚴令"
  JAP_high_defence_state_system:0 "高度国防国家体制"
  JAP_planning_institute:0 "企画院"
  JAP_active_military_service_for_ministers_of_war:0 "軍部大臣現役武官制"
@@ -95,6 +102,10 @@
  JAP_suppression_of_ideas_by_the_security_law:0 "治安維持法による思想弾圧"
  JAP_victory_in_the_greater_east_asia_war:0 "大東亜戦争に勝利"
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亜会議と大東亜共同宣言"
+ JAP_Martial_law:0 "戒嚴令"
+ JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
+ JAP_Lord_Duke:0 "公爵閣下"
+ JAP_Korean_Tiger:0 "朝鮮の虎"
  
 #首長
  JAP_Hideki_Tojo:0 "東條英機"
