--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -27,13 +27,31 @@
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Five_Reform_Directives:0 "五大改革指令"
+ JAP_Suzuki_Nomics:0 "鈴木ノミクス"
+ JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
+ JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
+ JAP_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所"
+ JAP_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
+ JAP_Civilian_System:0 "文民統制"
+ JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_New_institutional_movement:0 "新体制運動"
  JAP_Formation_of_the_Koaha:0 "興亜派の結成"
+ JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
+ JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
+ JAP_The_New_One_Nation_Movement:0 "一國新体制運動論"
+ JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
+ JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
+ JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
+ JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
+ JAP_A:0 "A"
+ JAP_B:0 "B"
+ JAP_C:0 "C"
  JAP_The_Koiso-Yonai_coalition_cabinet:0 "小磯・米内連立内閣"
+ JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
  JAP_Politics_Military:0 "～政治、軍事～"
  JAP_Politics_Military_desc:0 "ここまで政治、ここから軍事(仮)"
  
