--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -38,6 +38,8 @@
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_New_institutional_movement:0 "新体制運動"
  JAP_Formation_of_the_Koaha:0 "興亜派の結成"
+ JAP_East_Asia_Cooperativism:0 "東亜協同体論"
+ JAP_New_regime_movement_in_the_outer_regions:0 "外地の新体制運動を加速"
  JAP_Appointment_of_innovative_bureaucrats:0 "革新官僚の任命"
  JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
  JAP_The_New_One_Nation_Movement:0 "一國新体制運動論"
@@ -47,9 +49,9 @@
  JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
  JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
  JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
- JAP_A:0 "A"
- JAP_B:0 "B"
- JAP_C:0 "C"
+ JAP_Fujian_is_Japan's_lifeline:0 "福建は日本の生命線"
+ JAP_Opposite_shore_management:0 "対岸経営"
+ JAP_Sanwu_Corporation:0 "三五公司"
  JAP_The_Koiso-Yonai_coalition_cabinet:0 "小磯・米内連立内閣"
  JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
  JAP_Politics_Military:0 "～政治、軍事～"
