西インド, 東インドの追加

--- a/localisation/_geacps_state_names_native_l_english.yml
+++ b/localisation/_geacps_state_names_native_l_english.yml
@@ -12,10 +12,12 @@
 #	sv	スウェーデン語
 #	el	ギリシャ語
 #	es	スペイン語
+#	co	コルシカ語
 #	la	ラテン語
 #	ch	中国語
 l_english:
  STATE_1_fr:0 "コルス"
+ STATE_1_co:0 "コルシガ"
  STATE_3_en:0 "ベアン"
  STATE_3_fr:0 "ベルヌ"
  STATE_3_it:0 "ベルナ"
