--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -858,6 +858,10 @@
  DLI_DEF:0 "大連"
  DLI_ADJ:0 "大連"
  
+ EIN:0 "東インド"
+ EIN_DEF:0 "東インド"
+ EIN_ADJ:0 "東インド"
+ 
  ETR:0 "東トルキスタン"
  ETR_DEF:0 "東トルキスタン"
  ETR_ADJ:0 "東トルキスタン"
@@ -1344,6 +1348,10 @@
  VIR:0 "ヴァージン"
  VIR_DEF:0 "ヴァージン"
  VIR_ADJ:0 "ヴァージン"
+ 
+ WIN:0 "西インド"
+ WIN_DEF:0 "西インド"
+ WIN_ADJ:0 "西インド"
  
  WIW:0 "ウィンドワード"
  WIW_DEF:0 "ウィンドワード"
