--- a/localisation/countries_long_l_english.yml
+++ b/localisation/countries_long_l_english.yml
@@ -1011,8 +1011,14 @@
  DLI_warlord:0 "大連軍閥"
  DLI_warlord_DEF:0 "大連軍閥"
  
+ EIN_federation:0 "東インド連邦"
+ EIN_federation_DEF:0 "東インド連邦"
+ 
  ETR_republic:0 "東トルキスタン共和国"
  ETR_republic_DEF:0 "東トルキスタン共和国"
+ 
+ EZO_republic:0 "蝦夷共和国"
+ EZO_republic_DEF:0 "蝦夷共和国"
  
  FUJ_warlord:0 "福建軍閥"
  FUJ_warlord_DEF:0 "福建軍閥"
@@ -1103,6 +1109,13 @@
  QIG_ma_warlord:0 "青海馬家軍閥"
  QIG_ma_warlord_DEF:0 "青海馬家軍閥"
  
+ RYU_kingdom:0 "琉球王国"
+ RYU_kingdom_DEF:0 "琉球王国"
+ RYU_republic:0 "琉球共和国"
+ RYU_republic_DEF:0 "琉球共和国"
+ RYU_state:0 "琉球国"
+ RYU_state_DEF:0 "琉球国"
+ 
  SAB_republic:0 "サバ共和国"
  SAB_republic_DEF:0 "サバ共和国"
  
@@ -1147,6 +1160,8 @@
  TRV_kingdom:0 "トラヴァンコール王国"
  TRV_kingdom_DEF:0 "トラヴァンコール王国"
  
+ TWN_republic:0 "台湾共和国"
+ TWN_republic_DEF:0 "台湾共和国"
  TWN_state:0 "台湾国"
  TWN_state_DEF:0 "台湾国"
  TWN_warlord:0 "台湾軍閥"
@@ -1399,6 +1414,9 @@
  
  VIR_federation:0 "ヴァージン連邦"
  VIR_federation_DEF:0 "ヴァージン連邦"
+ 
+ WIN_federation:0 "西インド連邦"
+ WIN_federation_DEF:0 "西インド連邦"
  
  WIW_federation:0 "ウィンドワード連邦"
  WIW_federation_DEF:0 "ウィンドワード連邦"
