--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -8,22 +8,6 @@
  JAP_Agrarian_watchdog:0 "農本主義者を監視"
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Stability_of_the_situation:0 "事態の安定"
- JAP_Opening_of_the_extraordinary_session:0 "臨時会の開会"
- JAP_Draft_budget:0 "予算案"
- JAP_Economy:0 "経済"
- JAP_Supporting_local_industrial_news_federations:0 "各地の産業報国連盟を支援"
- JAP_Zaibatsu:0 "財閥"
- JAP_Military:0 "軍事"
- JAP_Yokosuka_Naval_Arsenal:0 "横須賀海軍工廠"
- JAP_Kure_Naval_Arsenal:0 "呉海軍工廠"
- JAP_Maizuru_Naval_Factory:0 "舞鶴海軍工廠"
- JAP_Sasebo_Naval_Factory:0 "佐世保海軍工廠"
- JAP_Kokura_Army_Arsenal:0 "小倉陸軍造兵廠"
- JAP_Tang_Rong_Artillery_Factory:0 "唐栄砲兵工廠を創立"
- JAP_Pyongyang_Weapons_Factory:0 "平壌兵器製造所"
- JAP_Army_Aviation_Factory:0 "陸軍航空工廠"
- JAP_Draft_Constitution:0 "憲法草案"
- JAP_Question_of_interference_with_the_General_Staff:0 "統帥権干渉問題"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Five_Reform_Directives:0 "五大改革指令"
@@ -54,8 +38,10 @@
  JAP_Sanwu_Corporation:0 "三五公司"
  JAP_The_Koiso-Yonai_coalition_cabinet:0 "小磯・米内連立内閣"
  JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
- JAP_Politics_Military:0 "～政治、軍事～"
- JAP_Politics_Military_desc:0 "ここまで政治、ここから軍事(仮)"
+ JAP_Hisaichi_Terauchi:0 "寺内寿一"
+ JAP_Royalization_Movement:0 "皇民化運動"
+ JAP_Shunroku_Hata:0 "畑俊六"
+ JAP_Ichichu_duo:0 "一中コンビ"
  
 #国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
@@ -126,6 +112,8 @@
  JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
  JAP_Lord_Duke:0 "公爵閣下"
  JAP_Korean_Tiger:0 "朝鮮の虎"
+ JAP_Commander-in-Chief_of_the_Southern_Army:0 "南方軍総司令官"
+ JAP_The_commander_of_Operation_Ichi-Go:0 "一号作戦の指揮官"
  
 #首長
  JAP_Hideki_Tojo:0 "東條英機"
@@ -134,6 +122,8 @@
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
+ JAP_Hisaichi_Terauchi:0 "寺内寿一"
+ JAP_Shunroku_Hata:0 "畑俊六"
  
 #イベント
  geacps_JAP.1.t:0 "大日本帝國"
