--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -9,6 +9,8 @@
  JAP_Re-exclusion_of_imperialists:0 "皇道派を再排除"
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
+ JAP_Keisuke_Okada:0 "岡田啓介"
+ JAP_Mitsumasa_Yonai:0 "米内光政"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Five_Reform_Directives:0 "五大改革指令"
  JAP_Suzuki_Nomics:0 "鈴木ノミクス"
@@ -16,6 +18,12 @@
  JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
  JAP_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所"
  JAP_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会"
+ JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
+ JAP_Signing_of_the_India-Japan_Trade_Agreement:0 "日印貿易協定の締結"
+ JAP_Signing_of_the_Basic_Treaty_of_Friendship_and_Co-operation_between_Australia_and_Japan:0 "日豪友好協力基本条約の締結"
+ JAP_The_Fourth_Japanese-British_Alliance_is_signed:0 "第四次日英同盟の調印"
+ JAP_Conclusion_of_Japan-New_Zealand_Trade_Agreement:0 "日新通商協定の締結"
+ JAP_British_Malayan_Tina:0 "英領マレーの錫"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
  JAP_Civilian_System:0 "文民統制"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
@@ -30,8 +38,8 @@
  JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
- JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
  JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
+ JAP_Conservative_bureaucratic_appointments:0 "保守官僚の任命"
  JAP_The_Koiso-Miao_Pin_Agreement:0 "小磯・繆斌協定"
  JAP_Fujian_is_Japan's_lifeline:0 "福建は日本の生命線"
  JAP_Opposite_shore_management:0 "対岸経営"
