--- a/localisation/geacps_JAP_l_english.yml
+++ b/localisation/geacps_JAP_l_english.yml
@@ -10,22 +10,34 @@
  JAP_Stability_of_the_situation:0 "事態の安定"
  JAP_Election_of_Prime_Minister:0 "首相の選出"
  JAP_Keisuke_Okada:0 "岡田啓介"
+ JAP_1:0 ""
+ JAP_2:0 ""
+ JAP_3:0 ""
+ JAP_4:0 ""
+ JAP_5:0 ""
+ JAP_Treaty_of_Mutual_Cooperation_and_Security_Between_the_United_States_and_Japan:0 "日本国及米国間相互協力及安全保障条約"
  JAP_Mitsumasa_Yonai:0 "米内光政"
+ JAP_6:0 ""
+ JAP_7:0 ""
+ JAP_8:0 ""
+ JAP_9:0 ""
+ JAP_10:0 ""
+ JAP_The_Soviet-Japanese_Alliance:0 "日ソ同盟"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Five_Reform_Directives:0 "五大改革指令"
  JAP_Suzuki_Nomics:0 "鈴木ノミクス"
  JAP_The_Transformation_of_the_Japanese_Archipelago:0 "日本列島改造論"
  JAP_Togo-Bevin_Agreement:0 "東郷・ベヴィン協定"
- JAP_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所"
- JAP_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会"
+ JAP_Establishment_of_Japanese-British_Contract_Naval_Committee:0 "日英合同海軍委員会の設置"
+ JAP_Establishment_of_the_Japanese-English_Contract_Naval_Technology_Institute:0 "日英合同海軍技術研究所の設立"
  JAP_Conclusion_of_the_Pacific_Security_Treaty:0 "太平洋安全保障条約の締結"
  JAP_Signing_of_the_India-Japan_Trade_Agreement:0 "日印貿易協定の締結"
  JAP_Signing_of_the_Basic_Treaty_of_Friendship_and_Co-operation_between_Australia_and_Japan:0 "日豪友好協力基本条約の締結"
- JAP_The_Fourth_Japanese-British_Alliance_is_signed:0 "第四次日英同盟の調印"
  JAP_Conclusion_of_Japan-New_Zealand_Trade_Agreement:0 "日新通商協定の締結"
  JAP_British_Malayan_Tina:0 "英領マレーの錫"
+ JAP_The_Fourth_Japanese-British_Alliance:0 "第四次日英同盟"
  JAP_Suzuki_and_Anan:0 "鈴木と阿南"
- JAP_Civilian_System:0 "文民統制"
+ JAP_Implementation_of_civilian_control:0 "文民統制の実施"
  JAP_Breakwaters_of_the_Pacific:0 "太平洋の防波堤"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_New_institutional_movement:0 "新体制運動"
@@ -36,6 +48,7 @@
  JAP_Organisation_of_the_Eastern_Conference:0 "東方会議の開催"
  JAP_The_New_One_Nation_Movement:0 "一國新体制運動論"
  JAP_Shigemitsu-Alvarez_Agreement:0 "重光・アルバレス協定"
+ JAP_Japan-Spain_Alliance:0 "日西同盟"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
  JAP_Nae_Seon_Il_Che:0 "内鮮一体"
  JAP_Bringing_the_peninsula_inland:0 "半島を内地に"
@@ -48,8 +61,17 @@
  JAP_Establishment_of_the_Chief_of_the_Supreme_Command:0 "最高幕僚長の設置"
  JAP_Hisaichi_Terauchi:0 "寺内寿一"
  JAP_Royalization_Movement:0 "皇民化運動"
+ JAP_11:0 ""
+ JAP_12:0 ""
+ JAP_13:0 ""
+ JAP_14:0 ""
+ JAP_Construction_of_the_East_Asia_Cooperative:0 "東亜協同体の建設"
  JAP_Shunroku_Hata:0 "畑俊六"
+ JAP_15:0 ""
+ JAP_16:0 ""
+ JAP_17:0 ""
  JAP_Ichichu_duo:0 "一中コンビ"
+ JAP_18:0 ""
  
 #国家方針
  GEACPS_NF_JAP_army_00:0 "軍部の統一"
@@ -117,6 +139,8 @@
  JAP_victory_in_the_greater_east_asia_war:0 "大東亜戦争に勝利"
  JAP_the_greater_east_asia_conference_and_the_greater_east_asia_joint_declaration:0 "大東亜会議と大東亜共同宣言"
  JAP_Martial_law:0 "戒嚴令"
+ JAP_A_great_raccoon_who_cares_for_his_country:0 "国を想う大狸"
+ JAP_Sake_is_Yonai_or_Yonai_is_sake:0 "酒が米内か、米内が酒か"
  JAP_Oni_no_Kantaro:0 "鬼の貫太郎"
  JAP_Lord_Duke:0 "公爵閣下"
  JAP_Korean_Tiger:0 "朝鮮の虎"
@@ -127,6 +151,8 @@
  JAP_Hideki_Tojo:0 "東條英機"
  JAP_Kisaburo_Ando:0 "安藤紀三郎"#臨時代理
  JAP_Mamoru_Shigemitsu:0 "重光葵"#臨時代理
+ JAP_Keisuke_Okada:0 "岡田啓介"
+ JAP_Mitsumasa_Yonai:0 "米内光政"
  JAP_Kantaro_Suzuki:0 "鈴木貫太郎"
  JAP_Fumimaro_Konoe:0 "近衛文麿"
  JAP_Kuniaki_Koiso:0 "小磯國昭"
